css/openlegend.css
/* ... */
.roll-chat .roll-name, .roll-chat .roll-type {
  text-transform: capitalize;
  font-variant: small-caps;
  font-weight: bolder;
  line-height: 26px;
  margin: 0;
}

.roll-chat .roll-name {
  font-size: 18px;
}

.roll-chat .roll-type {
  text-align: right;
  font-size: 24px;
  font-style: italic;
  font-weight: bolder;
  color: rgba(131, 131, 131, 0.781);
}

.roll-chat .card-tag {
  font-weight: bold;
  font-variant: small-caps;
  background-color: rgba(255, 222, 132, 0.466);
  padding-left: 2px;
  padding-right: 2px;
  border: 2px groove #eeede0;
}

.roll-chat .card-tag .tag-number {
  font-variant: none;
}

.roll-chat .card-vs {
  font-weight: bold;
  text-transform: capitalize;
}

.roll-chat .card-Advantage {
  background-color: rgba(95, 255, 95, 0.322);
}

.roll-chat .card-Disadvantage {
  background-color: rgba(255, 104, 104, 0.281);
}

/* Styles limited to openlegend sheets */
.openlegend {
  /* Header Summary Details */
  font-family: "Modesto", "Palatino Linotype", serif;
}

.openlegend .actions {
  grid-column: 2 / 4;
  grid-row: 6 / 9;
  background: #74e4f8;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-template-columns: -webkit-min-content minmax(-webkit-max-content, 1fr) -webkit-max-content -webkit-max-content -webkit-max-content -webkit-max-content -webkit-max-content 3fr -webkit-min-content -webkit-min-content -webkit-min-content;
  grid-template-columns: min-content minmax(max-content, 1fr) max-content max-content max-content max-content max-content 3fr min-content min-content min-content;
  grid-template-rows: 20px 20px repeat(auto-fill, 28px);
  grid-gap: 0.1rem;
  grid-column-gap: 0.5rem;
  padding: 0.25em;
  background: rgba(174, 234, 238, 0.35);
  border: 4px groove #eeede0;
}

.openlegend .actions .div {
  padding-bottom: 0.25em;
}

.openlegend .actions .action-title {
  grid-column: span 11;
  font-size: large;
  font-weight: bold;
}

.openlegend .actions .action-header {
  grid-column: span 1;
  font-style: italic;
}

.openlegend .actions .action-type, .openlegend .actions .action-attribute {
  text-transform: capitalize;
  font-variant: small-caps;
}

.openlegend .actions .action-adv {
  width: 25px;
}

.openlegend .pc-notes {
  grid-column: 2 / 4;
  grid-row: 10 / 13;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  padding: 0.25em;
  border: 4px groove #eeede0;
}

.openlegend .pc-notes .div {
  padding-bottom: 0.25em;
}

.openlegend .pc-notes .notes-title {
  grid-column: span 11;
  font-size: large;
  font-weight: bold;
}

.openlegend .attr-group {
  position: relative;
}

.openlegend .attr-settings {
  position: absolute;
  overflow: hidden;
  margin-top: 0.5em;
  margin-left: 0.3em;
  color: rgba(1, 1, 1, 0.2);
}

.openlegend .attributes {
  grid-column: 1 / 1;
  grid-row: 2 / 9;
  background-color: rgba(255, 174, 0, 0.35);
  border: 4px groove #eeede0;
  font-weight: bolder;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  display: inline-grid;
  grid-template-columns: 100px 1fr 1fr;
  grid-template-rows: repeat(26, 26px);
}

.openlegend .attribute-header {
  grid-column: span 3;
  background-color: rgba(0, 0, 0, 0.15);
  border-top: 2px groove #eeede0;
  text-align: center;
  text-transform: capitalize;
  font-size: large;
}

.openlegend .attribute-name {
  text-transform: capitalize;
  font-size: 110%;
  padding-right: 0.25em;
  text-align: right;
}

.openlegend .attribute-value {
  font-size: medium;
  font-weight: normal;
  text-align: center;
}

.openlegend .upgraded {
  color: green;
}

.openlegend .downgraded {
  color: red;
}

.openlegend .character {
  grid-column: 3 / 4;
  grid-row: 2 / 6;
  display: inline-grid;
  grid-template-columns: 2fr 1fr;
  grid-template-rows: 1fr 1fr 1fr 1fr;
  grid-gap: 0.25rem;
}

.openlegend .character .gear {
  grid-column: 1/3;
  grid-row: 1/3;
  border: 4px groove #eeede0;
  background-color: rgba(255, 196, 0, 0.35);
  overflow-y: scroll;
  scrollbar-width: thin;
}

.openlegend .character .gear .title {
  font-size: large;
  font-weight: bold;
}

.openlegend .character .feats {
  grid-column: 1/2;
  grid-row: 3/5;
  border: 4px groove #eeede0;
  background-color: rgba(133, 133, 133, 0.25);
  overflow-y: scroll;
  scrollbar-width: thin;
}

.openlegend .character .feats .title {
  grid-column: span 4;
  font-size: large;
  font-weight: bold;
}

.openlegend .character .perks {
  grid-column: 2/3;
  grid-row: 3/4;
  border: 4px groove #eeede0;
  background: rgba(0, 255, 98, 0.35);
}

.openlegend .character .flaws {
  grid-column: 2/3;
  grid-row: 4/5;
  border: 4px groove #eeede0;
  background: rgba(255, 125, 108, 0.35);
}

.openlegend .character .perks .title, .openlegend .character .flaws .title {
  font-size: large;
  font-weight: bold;
}

.openlegend .settings {
  position: absolute;
  overflow: hidden;
  margin-top: 0.1em;
  margin-left: 0.1em;
  color: rgba(1, 1, 1, 0.2);
}

.openlegend .health {
  grid-column: 2 / 3;
  grid-row: 2 / 3;
  display: inline-grid;
  grid-template-columns: 1fr 1fr 1fr;
  grid-gap: 0.25rem;
  padding: 0.25em;
  background: rgba(255, 128, 128, 0.6);
  border: 4px groove #eeede0;
  position: relative;
}

.openlegend .health-title {
  grid-column: 1/4;
  grid-row: 1/2;
  text-align: center;
  font-size: x-large;
  font-weight: bold;
  margin-bottom: -8;
}

.openlegend .health-type {
  font-size: large;
  text-align: center;
}

.openlegend .health-bonuses {
  grid-column: 1/4;
  display: inline-grid;
  grid-template-columns: auto auto;
  grid-gap: 0.25rem;
  font-size: small;
  vertical-align: middle;
}

.openlegend .health-bonuses .text-input {
  font-weight: normal;
  grid-gap: 0em;
}

.openlegend .health-bonuses input {
  background: rgba(0, 0, 0, 0);
  border: none;
  border-bottom: 1px solid black;
  border-radius: 0px;
}

.openlegend .health input {
  text-align: center;
}

.openlegend .guard {
  grid-column: 2 / 3;
  grid-row: 3 / 4;
  position: relative;
}
/* ... */

